syntax = "proto3";

package proto;

option go_package = "github.com/ronexlemon/rail/micro-services/wallet-service/proto;proto";

service WalletService {
  rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse) {}
  rpc BusinessWallet(BusinessWalletRequest) returns (BusinessWalletResponse) {}
  rpc WalletBalance(WalletBalanceRequest) returns (WalletBalanceResponse){};
  rpc WalletChainBalance(WalletBalanceRequest) returns (WalletChainBalanceResponse) {};
}

message CreateWalletRequest {
  string business_id = 1; 
  string customer_id = 2; 
  WalletType type = 3;    
}

message CreateWalletResponse {
  string wallet_id = 1;
  string business_id = 2;
  string customer_id = 3;
  WalletType type = 4;
  string message = 5;
}

/***Business Wallets***/
message BusinessWalletRequest {
  string business_id = 1;
  string customer_id = 2; // optional
}

// Response for business wallet retrieval
message BusinessWalletResponse {
  repeated Wallet wallets = 1;
  string message = 2;
}

// Wallet model representation
message Wallet {
  string wallet_id = 1;
  string address = 2;
  string network = 3;
  WalletType type = 4;
  string created_at = 5;
}

/*** Wallet Balance ***/
message WalletBalanceRequest {
  string user_address = 1;
  string business_id = 2;
  string network =3;
  string chain =4;
  string customer_id = 5; // optional

}

message WalletBalanceResponse {
  map<string, ChainBalances> balances = 1; // key = wallet address
  string message = 2;
}

// Wrapper for repeated chain balances per wallet
message ChainBalances {
  repeated ChainBalanceResult balances = 1;
}

// Chain balance per network
message ChainBalanceResult {
  string chain_name = 1;
  string usdc = 2; 
  string usdt = 3;
  string message = 4; // error message if any
}




// --- Response message ---
message WalletChainBalanceResponse {
  map<string, ChainBalanceResult> balances = 1; 
  
}


enum WalletType {
  BUSINESS = 0;
  CUSTOMER = 1;
}
